Outliner: Active selection not in sync when navigating with arrow keys #71812

Closed
opened 2019-11-23 11:21:03 +01:00 by David Gonzalez · 20 comments

System Information
Operating system: Windows 10 1903
Graphics card: RTX 2070

Blender Version
2.81 Final Release Portable Version

Short description of error
I tried to rename the objects in the scene by navigating through the objects in the outliner using the arrow keys but it doesn't work because the active object still remains to be the last object selected with the mouse.

Exact steps for others to reproduce the error

  • selecting an object with click in outliner
  • navigating/selecting another object in outliner with arrow Up and Down keys
  • press F2 to rename the selected object
  • selected object is still the first one
**System Information** Operating system: Windows 10 1903 Graphics card: RTX 2070 **Blender Version** 2.81 Final Release Portable Version **Short description of error** I tried to rename the objects in the scene by navigating through the objects in the outliner using the arrow keys but it doesn't work because the active object still remains to be the last object selected with the mouse. **Exact steps for others to reproduce the error** - selecting an object with click in outliner - navigating/selecting another object in outliner with arrow Up and Down keys - press F2 to rename the selected object - selected object is still the first one
Author

Added subscriber: @Bango

Added subscriber: @Bango

Added subscribers: @dfelinto, @AnthonyEdlin

Added subscribers: @dfelinto, @AnthonyEdlin
Dalai Felinto was assigned by Anthony Edlin 2019-11-23 12:08:04 +01:00

Thanks for the bug report.

Can confirm behavior as described. There are other cases where extending selection does not change the active object either such as shift and ctl clicking. If you select a material inside an object and then arrow down or up to another object F2 will still try to rename material. Not sure of intended behavior.

According to https://wiki.blender.org/wiki/Modules @dfelinto is an outliner developer so assigning.

Hmm I can't change priority. Good luck.

Thanks for the bug report. Can confirm behavior as described. There are other cases where extending selection does not change the active object either such as shift and ctl clicking. If you select a material inside an object and then arrow down or up to another object F2 will still try to rename material. Not sure of intended behavior. According to https://wiki.blender.org/wiki/Modules @dfelinto is an outliner developer so assigning. Hmm I can't change priority. Good luck.

Added subscriber: @natecraddock

Added subscriber: @natecraddock

More information from @Zachman in this report: #70843

Seems like there were issues changing active object when walking with arrow keys.

More information from @Zachman in this report: #70843 Seems like there were issues changing active object when walking with arrow keys.
Author

@AnthonyEdlin
Thanks for the reply.

Do I have to report the bug elsewhere or will the corresponding developers be notified already with this report here?

Another thing I would like to know is how and where possible fixes will be implemented? Will they be integrated in the actual "stable" 2.81 version or will they only show up in nightly builds until release of 2.82?

@AnthonyEdlin Thanks for the reply. Do I have to report the bug elsewhere or will the corresponding developers be notified already with this report here? Another thing I would like to know is how and where possible fixes will be implemented? Will they be integrated in the actual "stable" 2.81 version or will they only show up in nightly builds until release of 2.82?

@Bango It is assigned so the developers will find this report and respond sometime. Sometimes minor things like this are more complex than they seem.

It depends on the severity of bug and risk if any fixes get into 2.81a or some other version.

@Bango It is assigned so the developers will find this report and respond sometime. Sometimes minor things like this are more complex than they seem. It depends on the severity of bug and risk if any fixes get into 2.81a or some other version.

This is not a bug, just how the walk navigation is currently implemented. Due to other factors when activating elements, walk navigation that moves the active element caused issues. Once D5817 is reviewed and committed I intend to make walk navigation move the active element as expected.

This is not a bug, just how the walk navigation is currently implemented. Due to other factors when activating elements, walk navigation that moves the active element caused issues. Once [D5817](https://archive.blender.org/developer/D5817) is reviewed and committed I intend to make walk navigation move the active element as expected.
Author

@AnthonyEdlin
Ah okay. And where would I find the 2.81a build (if it will be released)?

@Zachman
Well, if it's not a bug then I don't understand the current implementation of the "navigating with arrow keys in the outliner" function and the "rename with F2" function. If I still have to use the mouse to change the active element then I can also double click on the element to rename it.

@AnthonyEdlin Ah okay. And where would I find the 2.81a build (if it will be released)? @Zachman Well, if it's not a bug then I don't understand the current implementation of the "navigating with arrow keys in the outliner" function and the "rename with F2" function. If I still have to use the mouse to change the active element then I can also double click on the element to rename it.

@Bango during development of the outliner during the Google Summer of Code, I originally did have arrow key navigation move the active element. But because activation was tied to other events (like toggling edit mode) the behavior felt inconsistent and confusing. Although moving only selection, not active is also not ideal, it was the easiest option to implement during the summer. The code for walk navigation is all there, and once the patch I mentioned is committed, it will be an easy fix to switch arrow key navigation back to the active object.

@Bango during development of the outliner during the Google Summer of Code, I originally did have arrow key navigation move the active element. But because activation was tied to other events (like toggling edit mode) the behavior felt inconsistent and confusing. Although moving only selection, not active is also not ideal, it was the easiest option to implement during the summer. The code for walk navigation is all there, and once the patch I mentioned is committed, it will be an easy fix to switch arrow key navigation back to the active object.

@Zachman I understand that there are issues with changing the active object through walk selection, but it seems that it would be ok to still rename things not from active object but from most recent walk selection if there is one and then active object only if there is no active walk.

I am no expert at outliner code so I didn't test this extensively, but I see there is code for flagging elements with TSE_ACTIVE_WALK and so I made a small patch that uses that as the element to rename first and then active element only if there is nothing flagged with TSE_ACTIVE_WALK. It seemed to work in the limited testing I did. Here is patch: outliner_use_active_walk_for_rename.diff

@Zachman I understand that there are issues with changing the active object through walk selection, but it seems that it would be ok to still rename things not from active object but from most recent walk selection if there is one and then active object only if there is no active walk. I am no expert at outliner code so I didn't test this extensively, but I see there is code for flagging elements with TSE_ACTIVE_WALK and so I made a small patch that uses that as the element to rename first and then active element only if there is nothing flagged with TSE_ACTIVE_WALK. It seemed to work in the limited testing I did. Here is patch: [outliner_use_active_walk_for_rename.diff](https://archive.blender.org/developer/F8170034/outliner_use_active_walk_for_rename.diff)
Author

@Zachman
Okay, I didn't knew or even recognize that the up and down keys would toggle edit mode. I'm using the 2.80 layout and those keys do only change the selected element in the outliner but only if the mouse pointer is in the outliner window, too.
But, like @AnthonyEdlin mentioned, there must be a way to rename the elements without changing the active element.

"The code for walk navigation is all there, and once the patch I mentioned is committed, it will be an easy fix to switch arrow key navigation back to the active object."
Well, that sounds promising ^^

@Zachman Okay, I didn't knew or even recognize that the up and down keys would toggle edit mode. I'm using the 2.80 layout and those keys do only change the selected element in the outliner but only if the mouse pointer is in the outliner window, too. But, like @AnthonyEdlin mentioned, there must be a way to rename the elements without changing the active element. "The code for walk navigation is all there, and once the patch I mentioned is committed, it will be an easy fix to switch arrow key navigation back to the active object." Well, that sounds promising ^^
Germano Cavalcante changed title from Active selection not in sync when navigating with arrow keys in outliner window. to Outliner: Active selection not in sync when navigating with arrow keys 2019-11-28 16:22:04 +01:00
Author

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author

@mano-wii
The title of this task sounds much better now ^^ Thanks!

@mano-wii The title of this task sounds much better now ^^ Thanks!
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Setting this task as confirmed, but also as known issue. Currently everything is working as intended, so there is no actual bug here. The behavior might be changed at some point, but that is outside of the scope of a bug report.

Btw, it's not super nice, but maybe you can use ctrl + F2 for renaming instead? That dialog can work on the selected objects instead of the active one.

Setting this task as confirmed, but also as known issue. Currently everything is working as intended, so there is no actual bug here. The behavior might be changed at some point, but that is outside of the scope of a bug report. Btw, it's not super nice, but maybe you can use `ctrl + F2` for renaming instead? That dialog can work on the selected objects instead of the active one.

I've used my diff a couple times now just to rename a bunch of large object count old blend files. So you can add the diff and compile your own blender if you want to rename with walk, while we wait for proper support for active object selection when walking. Maybe coming in this next gsoc.

I've used my diff a couple times now just to rename a bunch of large object count old blend files. So you can add the diff and compile your own blender if you want to rename with walk, while we wait for proper support for active object selection when walking. Maybe coming in this next gsoc.

This issue was referenced by 8ce1a60262

This issue was referenced by 8ce1a602627350bf986da5e3f60d9edd38006d52
Dalai Felinto was unassigned by Nathan Craddock 2020-06-21 00:17:40 +02:00
Nathan Craddock self-assigned this 2020-06-21 00:17:40 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71812
No description provided.