source/blender/makesdna/DNA_outliner_types.h
@@ -62,8 +62,7 @@ enum {
   TSE_DRAG_AFTER = (1 << 8),
   /* Needed because outliner-only elements can be active */
   TSE_ACTIVE = (1 << 9),
-  /* Needed because walk selection should not activate */
-  TSE_ACTIVE_WALK = (1 << 10),
+  /* TSE_ACTIVE_WALK = (1 << 10), */ /* Unused */
   TSE_DRAG_ANY = (TSE_DRAG_INTO | TSE_DRAG_BEFORE | TSE_DRAG_AFTER),
 };
 
